--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,93 @@
-# Core Dependencies
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-
-# LLM and AI
-litellm>=1.0.0
-openai>=1.0.0
-anthropic>=0.18.0
-
-# Database
-psycopg2-binary>=2.9.9
-sqlalchemy>=2.0.0
-
-# HTTP and Networking
-httpx>=0.24.0
-aiohttp>=3.8.0
-requests>=2.31.0
-
-# Caching
-redis>=5.0.0
-cachetools>=5.3.0
-
-# Async and Concurrency
-aiofiles>=23.0.0
-
-# Observability and Logging
-opentelemetry-api>=1.20.0
-opentelemetry-sdk>=1.20.0
-structlog>=23.0.0
-prometheus-client>=0.18.0
-
-# API Framework
-fastapi>=0.100.0
-uvicorn>=0.23.0
-
-# Utilities
-numpy>=1.24.0
-python-dateutil>=2.8.2
-typing-extensions>=4.5.0
-
-# Development Dependencies (optional)
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-pytest-mock>=3.10.0
-pytest-cov>=4.0.0
-black>=23.0.0
-isort>=5.12.0
-mypy>=1.0.0
-
+aiofiles==25.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anthropic==0.75.0
+anyio==4.12.0
+attrs==25.4.0
+black==25.12.0
+cachetools==6.2.4
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+coverage==7.13.1
+distro==1.9.0
+docstring_parser==0.17.0
+fastapi==0.128.0
+fastuuid==0.14.0
+filelock==3.20.1
+frozenlist==1.8.0
+fsspec==2025.12.0
+greenlet==3.3.0
+grpcio==1.67.1
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.2.3
+idna==3.11
+importlib_metadata==8.7.1
+iniconfig==2.3.0
+isort==7.0.0
+Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.3
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+librt==0.7.5
+litellm==1.80.11
+lxml==6.0.2
+MarkupSafe==3.0.3
+multidict==6.7.0
+mypy==1.19.1
+mypy_extensions==1.1.0
+numpy==2.4.0
+openai==2.14.0
+opentelemetry-api==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.5.1
+pluggy==1.6.0
+prometheus_client==0.23.1
+propcache==0.4.1
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==9.0.2
+pytest-asyncio==1.3.0
+pytest-cov==7.0.0
+pytest-mock==3.15.1
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+pytokens==0.3.0
+PyYAML==6.0.3
+redis==7.1.0
+referencing==0.37.0
+regex==2025.11.3
+requests==2.32.5
+rpds-py==0.30.0
+scikit-learn==1.8.0
+scipy==1.16.3
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.45
+starlette==0.50.0
+structlog==25.5.0
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+tokenizers==0.22.1
+tqdm==4.67.1
+typer-slim==0.21.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.2
+uvicorn==0.40.0
+yarl==1.22.0
+zipp==3.23.0
