--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==9.0.2
 pytest-asyncio==1.3.0
+pytest-benchmark==4.0.0
 pytest-cov==7.0.0
 pytest-mock==3.15.1
 python-dateutil==2.9.0.post0
