--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ pluggy==1.6.0
 prometheus_client==0.23.1
 propcache==0.4.1
 psycopg2-binary==2.9.11
+asyncpg==0.29.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
@@ -70,6 +71,8 @@ pytokens==0.3.0
 PyYAML==6.0.3
 dragonflydb==1.0.0
 redis==7.1.0  # Required for Dragonfly (Dragonfly is Redis-compatible)
+aioredis==2.0.1
+aiofiles==24.1.0
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
