--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ Repository = "https://github.com/motadata/motadata-python-ai-sdk"
 
 [tool.setuptools]
 packages = ["src"]
+# Tests are at root level (tests/), not in src/, so they're automatically excluded from package distribution
 
 [tool.setuptools.package-dir]
 "" = "src"
@@ -108,9 +109,46 @@ module = [
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
-testpaths = ["src/tests"]
+testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "auto"
+
+[tool.coverage.run]
+omit = [
+    "*/test_*.py",
+    "*/*_test.py",
+    "*/tests/*",
+    "*/__pycache__/*",
+    "*/venv/*",
+    "*/env/*",
+    "*/.venv/*",
+    "*/build/*",
+    "*/dist/*",
+    "*/*.egg-info/*",
+    "*/testdata/*",
+    "*/*_pb2.py",
+    "*/mock_*.py",
+    "*/mocks/*",
+    "*/conftest.py",
+    "*/setup.py",
+    "*/examples/*",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
+fail_under = 85
+precision = 2
+show_missing = true
+skip_covered = false
 
